--- a/rag_backend/render.yaml
+++ b/rag_backend/render.yaml
@@ -1,6 +1,7 @@
 services:
   - type: web
     name: yt-rag-backend
+    rootDir: rag_backend
     env: python
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn rag_backend.wsgi:application
